Fix paragraph spacing within a message-highlight div

--- a/assets/css/hyde.css
+++ b/assets/css/hyde.css
@@ -253,6 +253,10 @@ html {
   margin-top: 1rem;
 }
 
+.message-highlight p:last-child {
+  margin-bottom: 0;
+}
+
 .footnote {
   margin-top: 2rem;
   color: #c0c0c0;
